--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Fitness Equipment</title>
-   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous"> -->
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
    <link rel="stylesheet" href="css/index.css">
-   <link rel="shortcut icon" href="img/ktb-icon.svg" type="image/x-icon">
+   <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
 </head>
 
 <body>
@@ -38,27 +38,27 @@
          </div>
       </div>
    </main>
-   <!-- <div class="product-info modal fade" id="product-info-modal" tabindex="-1" aria-labelledby="product-info-modalLabel"
+   <div class="product-info modal fade" id="product-info-modal" tabindex="-1" aria-labelledby="product-info-modalLabel"
       aria-hidden="true">
       <div class="modal-dialog">
          <div class="modal-content">
             <div class="modal-header">
-               <h5 class="modal-title" id="product-info-modalLabel">Modal title</h5>
+               <h5 class="modal-title" id="product-info-modalLabel">Example title</h5>
                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-               <img class="d-block w-50 mx-auto product-image" src="img/baby-yoda.svg" alt="Baby Yoda">
-               <p class="product-description"></p>
+               <img class="product-image" src="img/rower.avif" alt="Rowing Machine">
+               <p class="product-description">Example product description</p>
             </div>
             <div class="modal-footer">
                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-               <button type="button" class="btn btn-primary btn-buy"><span class="product-price"></span> -
+               <button type="button" class="btn btn-primary btn-buy"><span class="product-price">$000</span> -
                   Buy</button>
             </div>
          </div>
       </div>
    </div>
-   <div class="cart modal fade" id="modal-cart" tabindex="-1" aria-labelledby="product-info-modalLabel"
+   <!-- <div class="cart modal fade" id="modal-cart" tabindex="-1" aria-labelledby="product-info-modalLabel"
       aria-hidden="true">
       <div class="modal-dialog">
          <div class="modal-content">
@@ -91,9 +91,9 @@
    </div> -->
    <footer></footer>
 
-   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"></script> -->
+      crossorigin="anonymous"></script>
    <script src="js/index.js"></script>
 </body>
 
