--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
       </div>
    </div>
    <!-- <div class="cart modal fade" id="modal-cart" tabindex="-1" aria-labelledby="product-info-modalLabel"
-      aria-hidden="true">
+      aria-hidden="true"> -->
+   <div>
       <div class="modal-dialog">
          <div class="modal-content">
             <div class="modal-header">
@@ -67,7 +68,8 @@
                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-               <div class="cart-product-list-container cart-container"></div>
+               <div class="cart-product-list-container cart-container">
+               </div>
                <hr>
                <div class="container">
                   <form class="form-contacts">
@@ -88,7 +90,7 @@
             </div>
          </div>
       </div>
-   </div> -->
+   </div>
    <footer></footer>
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
