--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
          </div>
       </div>
    </div>
-   <!-- <div class="cart modal fade" id="modal-cart" tabindex="-1" aria-labelledby="product-info-modalLabel"
-      aria-hidden="true"> -->
-   <div>
+   <div class="cart modal fade" id="modal-cart" tabindex="-1" aria-labelledby="product-info-modalLabel"
+      aria-hidden="true">
       <div class="modal-dialog">
          <div class="modal-content">
             <div class="modal-header">
