fixed the alert

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                <a class="nav-menu__item nav-menu__cart cart" href="#" data-bs-toggle="modal"
                   data-bs-target="#modal-cart">
                   <img class="nav-menu__cart-icon" src="img/cart-icon.svg" alt="cart-icon">
-                  <span class="nav-menu__cart-counter">0</span>
+                  <span class="nav-menu__cart-counter badge bg-dark cart-badge">0</span>
                </a>
             </ul>
          </div>
@@ -38,6 +38,7 @@
          </div>
       </div>
    </main>
+   <div class="alert-container container"></div>
    <div class="product-info modal fade" id="product-info-modal" tabindex="-1" aria-labelledby="product-info-modalLabel"
       aria-hidden="true">
       <div class="modal-dialog">
@@ -68,6 +69,7 @@
             </div>
             <div class="modal-body">
                <div class="cart-product-list-container cart-container">
+                  <!-- Items go here -->
                </div>
                <hr>
                <div class="container">
