--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
    </header>
    <main class="products">
       <div class="products__container container">
-         <h2 class="products__title" id="products">Products</h2>
+         <h2 class="products__title ff-upper my-3" id="products">Fitness Equipment</h2>
          <div class="products__product-list product-list">
          </div>
       </div>
