--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                <span></span>
             </button>
             <ul class="header__menu nav-menu">
+               <a class="nav-menu__item txt-accent" href="admin.html">Admin</a>
                <a class="nav-menu__item" href="#">Home</a>
                <a class="nav-menu__item" href="#products">Products</a>
                <a class="nav-menu__item nav-menu__cart cart" href="#" data-bs-toggle="modal"
