--- a/admin.html
+++ b/admin.html
@@ -47,39 +47,41 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                </div>
                <div class="modal-body">
-                  <div class="mb-3">
-                     <label for="newProductImg" class="form-label">Upload Image</label>
-                     <input class="form-control" type="file" id="newProductImg">
-                  </div>
-                  <div class="mb-3">
-                     <label for="newProductTitle" class="form-label">Product title</label>
-                     <input type="text" class="form-control" id="newProductTitle" placeholder="Type the title here">
-                  </div>
-                  <div class="mb-3">
-                     <label for="newProductDescription" class="form-label">Product description</label>
-                     <textarea class="form-control" id="newProductDescription" rows="3"></textarea>
-                  </div>
-                  <div class="mb-3">
-                     <label for="newProductPrice" class="form-label">Price</label>
-                     <input type="number" class="form-control" id="newProductPrice">
-                  </div>
-                  <div class="form-check">
-                     <input class="form-check-input" type="radio" name="isInStock" id="notInStock">
-                     <label class="form-check-label" for="notInStock">
-                        Not in stock
-                     </label>
-                  </div>
-                  <div class="form-check">
-                     <input class="form-check-input" type="radio" name="isInStock" id="InStock" checked>
-                     <label class="form-check-label" for="InStock">
-                        In stock
-                     </label>
-                  </div>
+                  <form action="#" id="addNewProductForm">
+                     <div class="mb-3">
+                        <label for="newProductImg" class="form-label">Upload Image</label>
+                        <input class="form-control" type="file" id="newProductImg">
+                     </div>
+                     <div class="mb-3">
+                        <label for="newProductTitle" class="form-label">Product title</label>
+                        <input type="text" class="form-control" id="newProductTitle" placeholder="Type the title here">
+                     </div>
+                     <div class="mb-3">
+                        <label for="newProductDescription" class="form-label">Product description</label>
+                        <textarea class="form-control" id="newProductDescription" rows="3"></textarea>
+                     </div>
+                     <div class="mb-3">
+                        <label for="newProductPrice" class="form-label">Price</label>
+                        <input type="number" class="form-control" id="newProductPrice">
+                     </div>
+                     <div class="form-check">
+                        <input class="form-check-input" type="radio" name="isInStock" id="notInStock">
+                        <label class="form-check-label" for="notInStock">
+                           Not in stock
+                        </label>
+                     </div>
+                     <div class="form-check">
+                        <input class="form-check-input" type="radio" name="isInStock" id="InStock" checked>
+                        <label class="form-check-label" for="InStock">
+                           In stock
+                        </label>
+                     </div>
+                  </form>
                </div>
 
                <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary">Save changes</button>
+                  <button type="submit" class="btn btn-primary">Add This Item</button>
                </div>
             </div>
          </div>
