started creating a function to add new products

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <header class="header">
       <nav>
          <div class="header__container container">
-            <a class="header__logo" href="#"><img src="img/logo.svg" alt="Company logo - Knights Equipment"></a>
+            <a class="header__logo" href="./"><img src="img/logo.svg" alt="Company logo - Knights Equipment"></a>
             <button class="header__burger-btn" type="button">
                <span></span>
             </button>
