added a dropdown btn to the header

--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
                <a class="nav-menu__item txt-accent" href="admin.html">Admin</a>
                <a class="nav-menu__item" href="#">Home</a>
                <a class="nav-menu__item" href="#products">Products</a>
+               <div class="dropdown nav-menu__item">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                     aria-expanded="false">
+                     Sort
+                  </button>
+                  <ul class="dropdown-menu">
+                     <li><a class="dropdown-item" href="#">Cardio</a></li>
+                     <li><a class="dropdown-item" href="#">Kettlebells</a></li>
+                     <li><a class="dropdown-item" href="#">Dumbells</a></li>
+                     <li><a class="dropdown-item" href="#">Barbells</a></li>
+                  </ul>
+               </div>
                <a class="nav-menu__item nav-menu__cart cart" href="#" data-bs-toggle="modal"
                   data-bs-target="#modal-cart">
                   <img class="nav-menu__cart-icon" src="img/cart-icon.svg" alt="cart-icon">
