--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                      Sort
                   </button>
                   <ul class="dropdown-menu">
-                     <li><a class="dropdown-item" href="#">Cardio</a></li>
-                     <li><a class="dropdown-item" href="#">Kettlebells</a></li>
-                     <li><a class="dropdown-item" href="#">Dumbells</a></li>
-                     <li><a class="dropdown-item" href="#">Barbells</a></li>
+                     <li><a class="dropdown-item" href="#" id="cardio">Cardio</a></li>
+                     <li><a class="dropdown-item" href="#" id="kettlebells">Kettlebells</a></li>
+                     <li><a class="dropdown-item" href="#" id="dumbbells">Dumbells</a></li>
+                     <li><a class="dropdown-item" href="#" id="barbells">Barbells</a></li>
                   </ul>
                </div>
                <a class="nav-menu__item nav-menu__cart cart" href="#" data-bs-toggle="modal"
