--- a/index.html
+++ b/index.html
@@ -16,31 +16,33 @@
       <nav>
          <div class="header__container container">
             <a class="header__logo" href="./"><img src="img/logo.svg" alt="Company logo - Knights Equipment"></a>
-            <button class="header__burger-btn" type="button">
-               <span></span>
-            </button>
-            <ul class="header__menu nav-menu">
-               <a class="nav-menu__item txt-accent" href="admin.html">Admin</a>
-               <a class="nav-menu__item" href="#">Home</a>
-               <a class="nav-menu__item" href="#products">Products</a>
-               <div class="dropdown nav-menu__item">
-                  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                     aria-expanded="false">
-                     Sort
-                  </button>
-                  <ul class="dropdown-menu">
-                     <li><a class="dropdown-item" href="#" id="cardio">Cardio</a></li>
-                     <li><a class="dropdown-item" href="#" id="kettlebells">Kettlebells</a></li>
-                     <li><a class="dropdown-item" href="#" id="dumbbells">Dumbells</a></li>
-                     <li><a class="dropdown-item" href="#" id="barbells">Barbells</a></li>
-                  </ul>
-               </div>
+            <div class="header__nav-and-cart">
+               <ul class="header__menu nav-menu">
+                  <a class="nav-menu__item txt-accent" href="admin.html">Admin</a>
+                  <a class="nav-menu__item" href="#">Home</a>
+                  <a class="nav-menu__item" href="#products">Products</a>
+                  <div class="dropdown nav-menu__item">
+                     <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Sort
+                     </button>
+                     <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#" id="cardio">Cardio</a></li>
+                        <li><a class="dropdown-item" href="#" id="kettlebells">Kettlebells</a></li>
+                        <li><a class="dropdown-item" href="#" id="dumbbells">Dumbells</a></li>
+                        <li><a class="dropdown-item" href="#" id="barbells">Barbells</a></li>
+                     </ul>
+                  </div>
+               </ul>
                <a class="nav-menu__item nav-menu__cart cart" href="#" data-bs-toggle="modal"
                   data-bs-target="#modal-cart">
                   <img class="nav-menu__cart-icon" src="img/cart-icon.svg" alt="cart-icon">
                   <span class="nav-menu__cart-counter badge bg-dark cart-badge">0</span>
                </a>
-            </ul>
+               <div class="header__burger-btn" type="button">
+                  <span class="header__burger-line"></span>
+               </div>
+            </div>
          </div>
       </nav>
    </header>
