fixed issue with overflow hidden in dropdown menu

--- a/admin.html
+++ b/admin.html
@@ -19,7 +19,7 @@
             <div class="header__nav-and-cart">
                <ul class="header__menu nav-menu">
                   <a class="nav-menu__item txt-accent" href="admin.html">Admin</a>
-                  <a class="nav-menu__item" href="#">Home</a>
+                  <a class="nav-menu__item" href="./">Home</a>
                   <a class="nav-menu__item" href="#products">Products</a>
                   <div class="dropdown nav-menu__item">
                      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
