--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             <a class="header__logo" href="./"><img src="img/logo.svg" alt="Company logo - Knights Equipment"></a>
             <div class="header__nav-and-cart">
                <ul class="header__menu nav-menu">
+                  <form class="nav-menu__search d-flex" role="search">
+                     <input class="nav-menu__search-input form-control me-2" type="search" placeholder="Search"
+                        aria-label="Search">
+                     <button class="nav-menu__search-btn btn btn-outline-success" type="submit">Search</button>
+                  </form>
                   <a class="nav-menu__item txt-accent" href="admin.html">Admin</a>
                   <a class="nav-menu__item" href="./">Home</a>
                   <a class="nav-menu__item" href="#products">Products</a>
