added new products

--- a/admin.html
+++ b/admin.html
@@ -30,7 +30,7 @@
                         <li><a class="dropdown-item" href="#" id="cardio">Cardio</a></li>
                         <li><a class="dropdown-item" href="#" id="kettlebells">Kettlebells</a></li>
                         <li><a class="dropdown-item" href="#" id="dumbbells">Dumbells</a></li>
-                        <li><a class="dropdown-item" href="#" id="barbells">Barbells</a></li>
+                        <li><a class="dropdown-item" href="#" id="gymnastic">Gymnastic</a></li>
                      </ul>
                   </div>
                </ul>
